--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,18 +5,18 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.6",
-    "@angular-eslint/builder": "^12.0.0",
-    "@angular-eslint/eslint-plugin": "^12.0.0",
-    "@angular-eslint/eslint-plugin-template": "^12.0.0",
-    "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "^12.0.0",
-    "@angular/language-service": "12.2.6",
-    "@html-eslint/eslint-plugin": "^0.11.0",
-    "@html-eslint/parser": "^0.11.0",
+    "@angular-devkit/build-angular": "~13.3.6",
+    "@angular-eslint/builder": "^13.2.1",
+    "@angular-eslint/eslint-plugin": "^13.2.1",
+    "@angular-eslint/eslint-plugin-template": "^13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "^13.2.1",
+    "@angular/language-service": "13.3.9",
+    "@html-eslint/eslint-plugin": "^0.13.1",
+    "@html-eslint/parser": "^0.13.1",
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
     "@types/chart.js": "^2.9.20",
-    "@types/codemirror": "0.0.87",
+    "@types/codemirror": "5.60.5",
     "@types/dragula": "^3.7.0",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
@@ -57,21 +57,21 @@
     "source-map-explorer": "^2.5.2",
     "theo": "^8.1.5",
     "ts-node": "~8.3.0",
-    "typescript": "~4.2.4",
+    "typescript": "~4.5.5",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "dependencies": {
-    "@angular/animations": "~12.2.6",
-    "@angular/cdk": "^12.2.6",
-    "@angular/cli": "~12.2.6",
-    "@angular/common": "~12.2.6",
-    "@angular/compiler": "~12.2.6",
-    "@angular/compiler-cli": "~12.2.6",
-    "@angular/core": "~12.2.6",
-    "@angular/forms": "~12.2.6",
-    "@angular/platform-browser": "~12.2.6",
-    "@angular/platform-browser-dynamic": "~12.2.6",
-    "@angular/router": "~12.2.6",
+    "@angular/animations": "~13.3.9",
+    "@angular/cdk": "^13.3.7",
+    "@angular/cli": "~13.3.6",
+    "@angular/common": "~13.3.9",
+    "@angular/compiler": "~13.3.9",
+    "@angular/compiler-cli": "~13.3.9",
+    "@angular/core": "~13.3.9",
+    "@angular/forms": "~13.3.9",
+    "@angular/platform-browser": "~13.3.9",
+    "@angular/platform-browser-dynamic": "~13.3.9",
+    "@angular/router": "~13.3.9",
     "@datorama/akita": "^6.2.0",
     "@fullcalendar/angular": "5.10.1",
     "@fullcalendar/common": "^5.10.1",
@@ -89,8 +89,8 @@
     "@sentry/angular": "6.2.3",
     "@sentry/tracing": "6.2.3",
     "@sentry/types": "^6.2.3",
-    "@uirouter/angular": "^8.0.1",
-    "@uirouter/core": "^6.0.7",
+    "@uirouter/angular": "^9.1.0",
+    "@uirouter/core": "^6.0.8",
     "@uirouter/rx": "^0.6.5",
     "@w11k/ngx-componentdestroyed": "^5.0.2",
     "@xeokit/xeokit-bim-viewer": "2.3.10",
@@ -142,8 +142,8 @@
   "scripts": {
     "analyze": "ng build --configuration production --stats-json && webpack-bundle-analyzer -h 0.0.0.0 -p 9999 ../public/assets/frontend/stats.json",
     "prebuild": "./scripts/link_plugin_placeholder.js",
-    "build": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --configuration production --named-chunks --extract-css --source-map",
-    "build:watch": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --watch --named-chunks --extract-css",
+    "build": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --configuration production --named-chunks --source-map",
+    "build:watch": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --watch --named-chunks",
     "tokens:generate": "theo src/app/spot/styles/tokens/tokens.yml --transform web --format sass,json --dest src/app/spot/styles/tokens/dist",
     "icon-font:generate": "node ./src/app/spot/icon-font/generate.js ./src/app/spot/icon-font",
     "preserve": "./scripts/link_plugin_placeholder.js",
