--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,13 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.6",
+    "@angular-devkit/build-angular": "^14.0.2",
     "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/eslint-plugin-template": "^13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/language-service": "13.3.9",
+    "@angular/language-service": "14.0.2",
     "@html-eslint/eslint-plugin": "^0.13.1",
     "@html-eslint/parser": "^0.13.1",
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
@@ -57,21 +57,21 @@
     "source-map-explorer": "^2.5.2",
     "theo": "^8.1.5",
     "ts-node": "~8.3.0",
-    "typescript": "~4.5.5",
+    "typescript": "~4.7.4",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "dependencies": {
-    "@angular/animations": "~13.3.9",
+    "@angular/animations": "^14.0.2",
     "@angular/cdk": "^13.3.7",
-    "@angular/cli": "~13.3.6",
-    "@angular/common": "~13.3.9",
-    "@angular/compiler": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.9",
-    "@angular/core": "~13.3.9",
-    "@angular/forms": "~13.3.9",
-    "@angular/platform-browser": "~13.3.9",
-    "@angular/platform-browser-dynamic": "~13.3.9",
-    "@angular/router": "~13.3.9",
+    "@angular/cli": "^14.0.2",
+    "@angular/common": "^14.0.2",
+    "@angular/compiler": "^14.0.2",
+    "@angular/compiler-cli": "^14.0.2",
+    "@angular/core": "^14.0.2",
+    "@angular/forms": "^14.0.2",
+    "@angular/platform-browser": "^14.0.2",
+    "@angular/platform-browser-dynamic": "^14.0.2",
+    "@angular/router": "^14.0.2",
     "@datorama/akita": "^6.2.0",
     "@fullcalendar/angular": "5.10.1",
     "@fullcalendar/common": "^5.10.1",
