--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -48,6 +48,8 @@
               "node_modules/@fullcalendar/common/main.css",
               "node_modules/@fullcalendar/daygrid/main.css",
               "node_modules/@fullcalendar/timegrid/main.css",
+              "node_modules/@fullcalendar/timeline/main.css",
+              "node_modules/@fullcalendar/resource-timeline/main.css",
               "node_modules/flatpickr/dist/flatpickr.min.css"
             ],
             "stylePreprocessorOptions": {
